--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -35,3 +35,14 @@ nav {
         }
     }
 }
+
+
+.dark {
+    border-bottom: 2px solid black;
+
+    .links {
+        a {
+            color: black;
+        }
+    }
+}
