--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,9 +1,10 @@
 nav {
-    width: 51.5%;
+    width: 51.7%;
     height: 92.5px;
+    margin: 0 auto;
     border-bottom: 2px solid white;
     position: fixed;
-    left: 25%;
+    left: 24.2%;
     z-index: 99;
     display: flex;
     justify-content: space-between;
