--- a/css/styles.css
+++ b/css/styles.css
@@ -704,4 +704,143 @@ nav .links a {
   margin-bottom: 33px;
 }
 
+.contactWrapper {
+  width: 981px;
+  display: flex;
+  min-height: 720px;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding-top: 148px;
+}
+
+.contactBox {
+  border-bottom: 2px solid black;
+  width: 220px;
+  height: 40px;
+  position: absolute;
+}
+.contactBox h1 {
+  text-transform: uppercase;
+  color: black;
+  font-size: 25px;
+  letter-spacing: 1.5px;
+  font-weight: 100;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.contact {
+  margin-top: 87px;
+  display: flex;
+}
+.contact .map img {
+  width: 400px;
+  height: 442px;
+  object-fit: cover;
+  margin-left: 75px;
+}
+.contact .contactForm {
+  width: 529px;
+  height: 522px;
+}
+.contact .contactForm .textFields {
+  width: 100%;
+  height: 60px;
+  margin-bottom: 21px;
+  padding-left: 21px;
+  background-color: #f5f5f5;
+  border: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
+}
+.contact .contactForm .longText {
+  width: 100%;
+  height: 60px;
+  margin-bottom: 21px;
+  padding-left: 21px;
+  padding-bottom: 140px;
+  background-color: #f5f5f5;
+  border: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
+}
+.contact .contactForm .contactSubmit {
+  width: 168px;
+  text-align: center;
+  height: 40px;
+  background-color: #EE4367;
+  display: flex;
+  padding-top: 20px;
+  justify-content: center;
+  cursor: pointer;
+}
+.contact .contactForm .contactSubmit:hover {
+  background-color: #a8304a;
+}
+.contact .contactForm .contactSubmit p {
+  color: white;
+  font-size: 16px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-transform: uppercase;
+  position: absolute;
+}
+
+@media only screen and (max-width: 1100px) {
+  .contact {
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 100px;
+  }
+  .contact .contactForm {
+    width: 500px;
+  }
+  .contact .map {
+    margin-top: 50px;
+    margin-left: -60px;
+    margin-bottom: 50px;
+  }
+  .contactBox {
+    margin-left: 38%;
+  }
+}
+@media only screen and (max-width: 980px) {
+  .contact {
+    flex-direction: column;
+    margin: 0 auto;
+    margin-left: 20%;
+    margin-top: 100px;
+  }
+  .contact .contactForm {
+    width: 400px;
+  }
+  .contact .map {
+    margin-top: 50px;
+    margin-left: -60px;
+    margin-bottom: 50px;
+  }
+  .contactBox {
+    position: absolute;
+    margin-left: 30%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .contact {
+    flex-direction: column;
+    margin: 0 auto;
+    margin-left: 3%;
+    margin-top: 100px;
+  }
+  .contact .contactForm {
+    width: 400px;
+  }
+  .contact .map {
+    margin-top: 50px;
+    margin-left: -60px;
+    margin-bottom: 50px;
+  }
+  .contactBox {
+    position: absolute;
+    margin-left: 30%;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
