--- a/css/styles.css
+++ b/css/styles.css
@@ -842,5 +842,49 @@ nav .links a {
     margin-left: 30%;
   }
 }
+.aboutSpace {
+  min-height: 630px;
+  max-width: 981px;
+  margin: 0 auto;
+  padding-top: 178px;
+}
+.aboutSpace .aboutPic {
+  max-width: 981px;
+}
+.aboutSpace .aboutPic img {
+  width: 100%;
+  height: 379px;
+  object-fit: cover;
+}
+.aboutSpace .aboutPic .about-overlay {
+  width: 981px;
+  height: 379px;
+  position: absolute;
+  background-color: rgba(255, 209, 64, 0.7);
+  z-index: 2;
+}
+.aboutSpace .about-title {
+  width: 200px;
+  height: 40px;
+  border-bottom: 2px solid black;
+  margin-top: -30px;
+  z-index: 3;
+  position: relative;
+  margin-bottom: 36.5px;
+}
+.aboutSpace .about-title p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 25px;
+}
+.aboutSpace .about-paragraph {
+  max-width: 981px;
+  padding-left: 5px;
+  padding-right: 5px;
+  letter-spacing: 1.5px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 16px;
+  font-weight: 100;
+  font-style: italic;
+}
 
 /*# sourceMappingURL=styles.css.map */
